--- a/CSS/login.css
+++ b/CSS/login.css
@@ -10,6 +10,10 @@
     background-color: #1c3754;
 }
 
+.nav-btn1{
+    border: 1px solid whitesmoke;
+}
+
 
 .form{
     border-radius: 3%;
