--- a/CSS/plans.css
+++ b/CSS/plans.css
@@ -41,8 +41,8 @@ html{
 }
 .packs{
     display: inline;
-    opacity: 90%;
-    font-size: 1rem;
+    opacity: 85%;
+    
     margin-left: 10px;
     font-family: 'Fira Mono', monospace;
 }
@@ -51,13 +51,13 @@ html{
 
 @media screen and (min-width:574px){
     .packs{
-        font-size: 1rem;
-        transition: all ease-in-out 0.6s;
+        font-size: 1.2vmax;
+        transition: all ease-in-out 0.2s;
     }
 }
 
 
-@media screen and (max-width: 1014px){
+@media screen and (max-width: 950px){
 
     .packs{
         font-size: 0.6rem;
